# rag-cli2

./: .gitignore
rag/: .github-exclude  .gitignore  AUDIT_COMPLETION_SUMMARY.md  CODE_AUDIT_REPORT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  PARALLEL_AGENT_TASKS.md  PRODUCTION_RELEASE_FIXES_v2.0.md  README.md  SECURITY.md  pyproject.toml  requirements-minimal.txt  requirements.txt  test_chroma_health.py
rag/.claude-plugin/: hooks.json  lifecycle.json
rag/.githooks/: README.md  pre-commit
rag/.github/workflows/: validate-plugin.yml
rag/config/: auto_indexing.json.example  citation_config.json.example  default.yaml  documentation_sources.yaml  error_history.json.example  rag_settings.json.example  services_status.json.example
rag/config/defaults/: error_config.json  hook_config.json  mcp.json  rag_settings.json  services.json
rag/config/schemas/: settings.schema.json
rag/data/: project_indexing_result.json
rag/docs/: DEPENDENCY_INJECTION.md  FIXES_APPLIED.md  README.md  REFACTORING_PLAN.md  V2_RESTRUCTURING_SUMMARY.md
rag/examples/: enhanced_dashboard_integration.py
rag/fix-imports/: SUMMARY.md  plan.md  state.json
rag/implement/: plan.md  state.json
rag/scripts/: configure_mcp.py  emoji_prevention.py  migrate_faiss_to_chromadb.py  monitor.ps1  remove_emojis.py  setup_env.py  setup_git_hooks.py  startup.ps1  validate_no_emojis.py  validate_plugin.py  verify_installation.py  verify_installation_v2.py  verify_rag_detection.py
rag/scripts/install/: legacy_install.py  legacy_install_plugin.py
rag/scripts/utils/: fix_all_imports_v2.py  fix_imports.py  fix_mcp_config.py  remove_syspath.py  update_imports_v2.py  update_plugin_imports.py
rag/src/config/: services_status.json
rag/src/rag_cli/: __init__.py
rag/src/rag_cli/agents/: __init__.py  base_agent.py  query_decomposer.py  result_synthesizer.py
rag/src/rag_cli/cli/: __init__.py  index.py  retrieve.py
rag/src/rag_cli/core/: agent_orchestrator.py  async_utils.py  best_practices_detector.py  claude_code_adapter.py  claude_integration.py  config.py  constants.py  content_extractors.py  dependency_injection.py  dependency_validator.py  document_processor.py  duplicate_detector.py  embeddings.py  exception_handlers.py  hyde.py  online_retriever.py  output.py  path_resolver.py  prompt_templates.py  query_classifier.py  query_enhancer.py  retrieval_pipeline.py  rich_output.py  types.py  (+5 more)
rag/src/rag_cli_plugin/: __init__.py
rag/test/: test_chromadb_persistence.py
rag/tests/: test_constants.py  test_core.py  test_dependency_injection.py  test_document_processor.py  test_foundation.py  test_maf_embedded.py  test_query_classifier.py
(+79 files in other folders)
